fix(): use larger gap for small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ h3 {
 		align-items: center;
 		display: flex;
 		flex-direction: column;
-		gap: var(--base);
+		gap: var(--base-large);
 		padding: var(--base);
 	}
 
